# T3chiesMathsApp

./: README.md
Client/: .gitignore  CMakeLists.txt  Makefile
Client/include/: ChatDisplay.hpp  Display.hpp  MainWindow.hpp  MathsDisplay.hpp  MessageInput.hpp  ServerBar.hpp  ServerWidget.hpp
Client/src/: ChatDisplay.cpp  Display.cpp  MainWindow.cpp  MathsDisplay.cpp  MessageInput.cpp  ServerBar.cpp  ServerWidget.cpp  main.cpp
